Fix production CORS and CORS preflight after reset.